samples/_failures_safe/1761399600_3cc4f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16f94211.c: In function ‘main’:
./samples/SAFE/__tmp_16f94211.c:124:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  124 |     int matrix
      |     ^~~
./samples/SAFE/__tmp_16f94211.c:124:5: error: expected declaration or statement at end of input
